import mongoose, { Types } from 'mongoose'
import { NotificationTypes } from '~/constants/enums'

export interface Notification {
  _id: Types.ObjectId
  sender_id?: Types.ObjectId
  receiver_id: Types.ObjectId
  content: string
  name_notification?: string
  link_id?: string
  metadata?: Record<string, unknown>
  is_read: boolean
  type: NotificationTypes
}

const NotificationSchema = new mongoose.Schema<Notification>(
  {
    sender_id: {
      type: mongoose.SchemaTypes.ObjectId,
      ref: 'users',
      default: null
    },
    receiver_id: {
      type: mongoose.SchemaTypes.ObjectId,
      ref: 'users',
      required: true
    },
    content: { type: String, required: true },
    name_notification: { type: String, default: '' },
    link_id: { type: String, default: '' },
    metadata: { type: mongoose.SchemaTypes.Mixed, default: null },
    is_read: { type: Boolean, default: false },
    type: { type: Number, required: true }
  },
  {
    timestamps: true,
    collection: 'notifications'
  }
)

const NotificationModel = mongoose.model('notifications', NotificationSchema)

// Index for fast query by receiver + read status
NotificationSchema.index({ receiver_id: 1, is_read: 1, createdAt: -1 })

export default NotificationModel
